completed basic styling

--- a/source/index.html
+++ b/source/index.html
@@ -353,8 +353,8 @@
       <!-- Pagination -->
 
       <div class="catalog__pagination pagination">
-        <a class="pagination__prev-link link" href="#">
-          <span class="pagination__prev-link-text">Назад</span>
+        <a class="pagination__link pagination__link--prev link" href="#">
+          <span class="pagination__link-text">Назад</span>
         </a>
         <ul class="pagination__pages-list">
           <li class="pagination__pages-item">
@@ -367,8 +367,8 @@
             <a class="pagination__pages-link link" href="#">3</a>
           </li>
         </ul>
-        <a class="pagination__next-link link" href="#">
-          <span class="pagination__next-link-text">Вперёд</span>
+        <a class="pagination__link agination__link--next link" href="#">
+          <span class="pagination__link-text">Вперёд</span>
         </a>
       </div>
     </section>
