--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,7 @@
           <a class="navigation__user-link link" href="#">
             <svg aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16"
             xmlns="http://www.w3.org/2000/svg">
-            <use href="./img/stack.svg#user" />
+            <use href="./img/icons/stack.svg#user" />
           </svg>
             <span class="navigation__user-text">Войти</span></a>
         </li>
@@ -35,7 +35,7 @@
           <a class="navigation__user-link link" href="#">
             <svg aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16"
             xmlns="http://www.w3.org/2000/svg">
-            <use href="./img/stack.svg#card" />
+            <use href="./img/icons/stack.svg#card" />
           </svg>
             <span class="navigation__user-text">Корзина</span>
           </a>
@@ -383,26 +383,28 @@
   <!-- Footer -->
 
   <footer class="footer">
-    <a class="footer__logo-link link" href="#">
-      <img class="logo-image" src="" alt="Логотип магазина Drink to go.">
-    </a>
-    <ul class="footer__social social">
-      <li class="social__item">
-        <a class="social__link social__link--vk link" href="#">
-          <span class="visually-hidden">Вконтакте</span>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--pinterest link" href="#">
-          <span class="visually-hidden">Pinterest</span>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--ok link" href="#">
-          <span class="visually-hidden">Одноклассники</span>
-        </a>
-      </li>
-    </ul>
+    <div class="footer__wrapper">
+      <a class="footer__logo-link link" href="#">
+        <img class="logo-image" src="" alt="Логотип магазина Drink to go.">
+      </a>
+      <ul class="footer__social social">
+        <li class="social__item">
+          <a class="social__link social__link--vk link" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--pinterest link" href="#">
+            <span class="visually-hidden">Pinterest</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--ok link" href="#">
+            <span class="visually-hidden">Одноклассники</span>
+          </a>
+        </li>
+      </ul>
+    </div>
     <div class="footer__wrapper">
       <h2 class="footer__list-title">Интернет-магазин</h2>
       <ul class="footer__shop-list">
