grids for features

--- a/source/index.html
+++ b/source/index.html
@@ -189,21 +189,21 @@
       <b class="features__text text-features">Преимущества</b>
       <h2 class="features__title">Главные причины выбрать Drink2Go</h2>
       <ul class="features__list">
-        <li class="features__item">
+        <li class="features__item features__item--speed">
           <h3 class="features__item-title">Скорость</h3>
           <p class="features__item-text">Готовый напиток всегда под рукой — просто открой банку</p>
         </li>
-        <li class="features__item">
+        <li class="features__item features__item--cheerfulness">
           <h3 class="features__item-title">Удобство</h3>
-          <p class="features__item-text">Легко помещается и в карман, и в маленькую сумочку</p>
+          <p class="features__item-text">Легко помещается и в карман, и&nbsp;в&nbsp;маленькую сумочку</p>
         </li>
-        <li class="features__item">
+        <li class="features__item features__item--convenience">
           <h3 class="features__item-title">Бодрость</h3>
-          <p class="features__item-text">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+          <p class="features__item-text">Сбалансированная доза кофеина даст&nbsp;мощный заряд энергии</p>
         </li>
-        <li class="features__item">
+        <li class="features__item features__item--eco">
           <h3 class="features__item-title">Экологичность</h3>
-          <p class="features__item-text">Вся упаковка сделана из перерабатываемых материалов</p>
+          <p class="features__item-text">Вся упаковка сделана из&nbsp;перерабатываемых материалов</p>
         </li>
       </ul>
     </section>
